cabal-version: 2.2
name:
  primitive-convenience
version:
  0.1
synopsis:
  convenience class for PrimMonad m/PrimState m
description:
  convenience class for PrimMonad m/PrimState m
homepage:
  https://github.com/haskell-primitive/primitive-convenience
bug-reports:
  https://github.com/haskell-primitive/primitive-convenience/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Data
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.6.5

library
  hs-source-dirs:
    src
  exposed-modules:
    Control.Monad.Primitive.Convenience
  build-depends:
    , base >= 4.11 && < 4.13
    , primitive >= 0.6.4 && < 0.8
    , transformers >= 0.5 && < 0.6
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/haskell-primitive/primitive-convenience.git
